--- a/index.html
+++ b/index.html
@@ -1,7 +1,77 @@
-Faculdade META;
-Bem-vindo à Faculdasde Meta, temos vários
-cursos de tecnologia.
-Engenahria da computação;
-Sistemas para internet;
-Redes de computadores;
-jogos digitais;
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Faculdade META</title>
+</head>
+<style type="text/css">
+	td {
+		border: 1px solid blue
+	}
+</style>
+<body>
+	<h1><center><fieldset style="border: 1px solid blue">Faculdade Meta</fieldset></center></h1>
+	<h2><center>Bem Vindo</center></h2>
+	<fieldset style="border: 1px solid blue">
+    <legend>Formulário de Matrícula</legend>
+    <form action="">
+ 	Nome: <input type="text" name="nome" id="nome" style="border: 1px solid blue"> <br/><br/>
+  	Data de Nascimento: <input type="date" name="data" id="data" style="border: 1px solid blue"> <br/><br/>
+  	Sexo: <select style="border: 1px solid blue">
+  	<option>Masculino</option>
+  	<option>Feminino</option>
+  	<option>Outros</option>
+  	</select> <br/><br/>
+  	CPF: <input type="text" name="cpf" id="cpf" style="border: 1px solid blue"> <br/><br/>
+	E-mail: <input type="text" name="email" id="email" style="border: 1px solid blue"/>
+	</form>
+    </fieldset>
+    <br/>
+    Termo de responsabilidade: <br/> <input type="checkbox" name=""> Me responsabilizo pelos dados preenchidos
+	<br/>
+		<table style="border: 1px solid blue">
+	<thead>
+	<br/>
+	<tr>
+		<td><center>Professor</center></td>
+		<td><center>Disciplina</center></td>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td rowspan="3"><center>José Augusto</center></td>
+		<td><center>Linguagem de Programação 2</center></td>
+	</tr>
+	<tr>
+		<td><center>Banco de Dados 2</center></td>
+	</tr>
+	<tr>
+		<td><center>Sistemas Digitas 2</center></td>
+	</tr>
+	</tbody>
+	<tfoot>
+		<tr>
+		<td colspan="2"><center>Válido para 2018.1</center></td>
+		</tr>
+	</tfoot>
+		</table>
+		<h3>Os Melhores Cursos</h3>
+<ul>
+<li>Engenharia da Computação</li>
+<li>Sistemas para Internet</li>
+<li>Rede de Computação</li>
+<li>Jogos Digitais</li>
+</ul>
+		</div>
+		<span>
+		<a href="http://meta.edu.br/faculdade"> Link para a Faculdade Meta</a>
+		</span>
+		<br><br>
+		<span>
+		<i>Autor: Augusto Lobo</i> <a href="https://github.com/xlobosinx/">(GitHUB)</a>
+		</span>
+		<br><br>
+		<b>Faculdade Meta - 2018</b>
+		<br>
+		<strong>Todos os direitos reservados</strong>
+</body>
+</html>
